shrinking the DB area just causes problems, tdf#89546

Change-Id: Ic7a736141bc78e36c71b639244c6f5cf0d145073